// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`GameField component should take correct dimensions from viewport and/or field 1`] = `
<div
  className="makeStyles-root-1 makeStyles-root-4"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-18 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 2`] = `
<div
  className="makeStyles-root-1 makeStyles-root-19"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-20 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 3`] = `
<div
  className="makeStyles-root-1 makeStyles-root-21"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-22 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 4`] = `
<div
  className="makeStyles-root-1 makeStyles-root-23"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-24 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 5`] = `
<div
  className="makeStyles-root-1 makeStyles-root-25"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-26 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 6`] = `
<div
  className="makeStyles-root-1 makeStyles-root-27"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-28 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 7`] = `
<div
  className="makeStyles-root-1 makeStyles-root-29"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-30 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 8`] = `
<div
  className="makeStyles-root-1 makeStyles-root-31"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-32 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`GameField component should take correct dimensions from viewport and/or field 9`] = `
<div
  className="makeStyles-root-1 makeStyles-root-33"
>
  <div
    className="makeStyles-column-2"
  >
    <button
      className="MuiButtonBase-root MuiButton-root MuiButton-contained makeStyles-root-13 makeStyles-root-34 makeStyles-closed-16"
      disabled={false}
      onBlur={[Function]}
      onClick={[Function]}
      onDragLeave={[Function]}
      onFocus={[Function]}
      onKeyDown={[Function]}
      onKeyUp={[Function]}
      onMouseDown={[Function]}
      onMouseLeave={[Function]}
      onMouseUp={[Function]}
      onTouchEnd={[Function]}
      onTouchMove={[Function]}
      onTouchStart={[Function]}
      tabIndex={0}
      type="button"
    >
      <span
        className="MuiButton-label"
      >
         
      </span>
      <span
        className="MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;
